Dodano zwierzęta: żółw, lis, antylopa oraz obsługę odbicia ataku przez żółwia, ucieczki antylopy i omijania silniejszych przez lisa.

--- a/WirtualnySwiat/WirtualnySwiat.vcxproj
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj
@@ -110,20 +110,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Antylopa.h" />
+    <ClInclude Include="Lis.h" />
     <ClInclude Include="Organizm.h" />
     <ClInclude Include="Owca.h" />
     <ClInclude Include="Roslina.h" />
     <ClInclude Include="Swiat.h" />
     <ClInclude Include="Wilk.h" />
+    <ClInclude Include="Zolw.h" />
     <ClInclude Include="Zwierze.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Antylopa.cpp" />
+    <ClCompile Include="Lis.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Organizm.cpp" />
     <ClCompile Include="Owca.cpp" />
     <ClCompile Include="Roslina.cpp" />
     <ClCompile Include="Swiat.cpp" />
     <ClCompile Include="Wilk.cpp" />
+    <ClCompile Include="Zolw.cpp" />
     <ClCompile Include="Zwierze.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
