--- a/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClInclude Include="Owca.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Zolw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lis.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Antylopa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Swiat.cpp">
@@ -54,6 +63,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Owca.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Zolw.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Antylopa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
