--- a/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="Antylopa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Trawa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mlecz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Guarana.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Swiat.cpp">
@@ -72,6 +81,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Antylopa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Trawa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mlecz.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Guarana.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
