Zaimplementowano resztę roślin: wilcze jagody oraz barszcz Sosnowskiego.

--- a/WirtualnySwiat/WirtualnySwiat.vcxproj
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj
@@ -117,8 +117,10 @@
     <ClInclude Include="Organizm.h" />
     <ClInclude Include="Owca.h" />
     <ClInclude Include="Roslina.h" />
+    <ClInclude Include="Sosnowski.h" />
     <ClInclude Include="Swiat.h" />
     <ClInclude Include="Trawa.h" />
+    <ClInclude Include="WilczeJagody.h" />
     <ClInclude Include="Wilk.h" />
     <ClInclude Include="Zolw.h" />
     <ClInclude Include="Zwierze.h" />
@@ -132,8 +134,10 @@
     <ClCompile Include="Organizm.cpp" />
     <ClCompile Include="Owca.cpp" />
     <ClCompile Include="Roslina.cpp" />
+    <ClCompile Include="Sosnowski.cpp" />
     <ClCompile Include="Swiat.cpp" />
     <ClCompile Include="Trawa.cpp" />
+    <ClCompile Include="WilczeJagody.cpp" />
     <ClCompile Include="Wilk.cpp" />
     <ClCompile Include="Zolw.cpp" />
     <ClCompile Include="Zwierze.cpp" />
