--- a/WirtualnySwiat/WirtualnySwiat.vcxproj
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Antylopa.h" />
+    <ClInclude Include="CyberOwca.h" />
     <ClInclude Include="Czlowiek.h" />
     <ClInclude Include="Guarana.h" />
     <ClInclude Include="Lis.h" />
@@ -129,6 +130,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Antylopa.cpp" />
+    <ClCompile Include="CyberOwca.cpp" />
     <ClCompile Include="Czlowiek.cpp" />
     <ClCompile Include="Guarana.cpp" />
     <ClCompile Include="Lis.cpp" />
