--- a/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
+++ b/WirtualnySwiat/WirtualnySwiat.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="stale.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CyberOwca.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Swiat.cpp">
@@ -111,6 +114,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Czlowiek.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CyberOwca.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
